fix: align globe and make it grey

--- a/src/views/instances/instances-list.module.css
+++ b/src/views/instances/instances-list.module.css
@@ -20,6 +20,8 @@
     display: flex;
     gap: var(--spacers-dp8);
 }
-.button-separator {
-    border-left: 1px solid var(--colors-grey300);
+.verticallyAlignedCellContent {
+    display: inline-flex;
+    align-items: center;
+    gap: var(--spacers-dp4);
 }
